# SIEGAM_FULL

./: .gitignore  .gitignore copy  README.md  docker-compose.yaml
modules/etl/: .env.example  .gitignore  Dockerfile  MODULE.md  Makefile  README.md  api.http  docker-compose.yml  main.py  pyproject.toml  run_once.py  settings.py
modules/etl/application/: download.py  load.py  transform.py
modules/etl/application/analyzer/: __init__.py  humidity.py  main.py  organizer.py  rain.py  temperature.py  types.py  wind.py
modules/etl/domain/: __init__.py  constants.py  entities.py  exceptions.py  validators.py  value_objects.py
modules/etl/infra/: file_system.py  httpx.py  temperature_config.py  timer.py
modules/etl/infra/celery/: config.py
modules/etl/infra/database/: __init__.py  application_log_repository.py  aviso_repository.py  cidade_repository.py  evento_repository.py  postgres.py
modules/etl/infra/logger/: __init__.py  json_logger.py
modules/etl/init-db/: schema.sql
modules/etl/scripts/: verify_db.py
modules/notifications/: .env.example  Dockerfile  MODULE.md  TESTE_INTEGRADO_WHATSAPP.md  docker-compose.yml  main.py  pyproject.toml  settings.py
modules/notifications/application/: consumer.py  dispatcher.py  filter.py  resolver.py
modules/notifications/application/templates/: __init__.py  base.py  email_renderer.py  (+1 more)
modules/notifications/domain/: __init__.py  constants.py  entities.py  exceptions.py  protocols.py  value_objects.py
modules/notifications/tests/: __init__.py  test_filter.py  test_templates.py  test_value_objects.py
(+200 files in other folders)
