[project]
name = "etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "redis>=7.1.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["application", "domain", "infra"]
