[project]
name = "notifications"
version = "0.1.0"
description = "Módulo de notificações meteorológicas - consome avisos do ETL e despacha por e-mail e WhatsApp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "redis>=7.1.0",
    "pydantic-settings>=2.12.0",
    "structlog>=24.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["application", "domain", "infra"]
